# work

./: .gitignore  CMakeLists.txt  a.out  main.cpp  pso  pso.cpp  pso.h  readme.md  test.cu  test1.cu  teteewq1.md
include/: pso.h  tools.h
src/: CMakeLists.txt  main.cpp  pso.cpp  tools.cpp
srccuda/: CMakeLists.txt  a.out  test2.cu  test_gpu.cu  testgpu.cuh
